[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qbo-gateway"
version = "0.1.0"
description = "QuickBooks Online OAuth gateway microservice"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "HQ" }]
dependencies = [
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.29,<0.31",
  "httpx>=0.27,<0.28",
  "sqlalchemy[asyncio]>=2.0.34,<2.1",
  "alembic>=1.13,<1.15",
  "psycopg[binary]>=3.1,<3.2",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<2.6",
  "tenacity>=8.2,<8.3",
  "cryptography>=42.0,<43.0",
  "python-json-logger>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27,<0.28",
  "coverage[toml]>=7.5",
  "ruff>=0.6"
]

[project.scripts]
qbo-gateway = "app.main:run"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
